Modernize Java collection/string APIs and enforce JDK 21 build runtime
Agent-Logs-Url: https://github.com/psi-probe/psi-probe/sessions/4f55a192-70d3-4b5d-b667-8d5373d7f601

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>