@@ -351,7 +351,7 @@ public class ServletInfo {
    * @return the mappings
    */
   public List<String> getMappings() {
-    return mappings == null ? Collections.emptyList() : new ArrayList<>(mappings);
+    return mappings == null ? List.of() : new ArrayList<>(mappings);
   }
 
   /**
@@ -360,7 +360,7 @@ public class ServletInfo {
    * @param mappings the new mappings
    */
   public void setMappings(Collection<String> mappings) {
-    this.mappings = mappings == null ? Collections.emptyList() : new ArrayList<>(mappings);
+    this.mappings = mappings == null ? List.of() : new ArrayList<>(mappings);
   }
 
 }
