@@ -28,7 +28,7 @@ public class TransportableModel {
    * @return the items
    */
   public Map<String, Object> getItems() {
-    return items == null ? Collections.emptyMap() : new HashMap<>(items);
+    return items == null ? Map.of() : new HashMap<>(items);
   }
 
   /**
@@ -37,7 +37,7 @@ public class TransportableModel {
    * @param items the items
    */
   public void setItems(Map<String, Object> items) {
-    this.items = items == null ? Collections.emptyMap() : new HashMap<>(items);
+    this.items = items == null ? Map.of() : new HashMap<>(items);
   }
 
   /**
