@@ -267,7 +267,7 @@ public class SslHostConfigInfo implements Serializable {
    * @return the trust store certs
    */
   public List<Cert> getTrustStoreCerts() {
-    return trustStoreCerts == null ? Collections.emptyList() : new ArrayList<>(trustStoreCerts);
+    return trustStoreCerts == null ? List.of() : new ArrayList<>(trustStoreCerts);
   }
 
   /**
@@ -277,7 +277,7 @@ public class SslHostConfigInfo implements Serializable {
    */
   public void setTrustStoreCerts(Collection<Cert> trustStoreCerts) {
     this.trustStoreCerts =
-        trustStoreCerts == null ? Collections.emptyList() : new ArrayList<>(trustStoreCerts);
+        trustStoreCerts == null ? List.of() : new ArrayList<>(trustStoreCerts);
   }
 
   /**
@@ -286,7 +286,7 @@ public class SslHostConfigInfo implements Serializable {
    * @return certificate infos
    */
   public List<CertificateInfo> getCertificateInfos() {
-    return certificateInfos == null ? Collections.emptyList() : new ArrayList<>(certificateInfos);
+    return certificateInfos == null ? List.of() : new ArrayList<>(certificateInfos);
   }
 
   /**
@@ -296,7 +296,7 @@ public class SslHostConfigInfo implements Serializable {
    */
   public void setCertificateInfos(Collection<CertificateInfo> certificateInfos) {
     this.certificateInfos =
-        certificateInfos == null ? Collections.emptyList() : new ArrayList<>(certificateInfos);
+        certificateInfos == null ? List.of() : new ArrayList<>(certificateInfos);
   }
 
 }
