@@ -56,7 +56,7 @@ public class Summary implements Serializable {
    * @return the items
    */
   public Map<String, Item> getItems() {
-    return items == null ? Collections.emptyMap() : new HashMap<>(items);
+    return items == null ? Map.of() : new HashMap<>(items);
   }
 
   /**
@@ -65,7 +65,7 @@ public class Summary implements Serializable {
    * @param items the items
    */
   public void setItems(Map<String, Item> items) {
-    this.items = items == null ? Collections.emptyMap() : new HashMap<>(items);
+    this.items = items == null ? Map.of() : new HashMap<>(items);
   }
 
   /**
