@@ -50,7 +50,7 @@ class LogResolverBeanTest {
 
   @Test
   void testGetAndSetStdoutFiles() {
-    List<String> files = Arrays.asList("catalina.out", "stdout.log");
+    List<String> files = List.of("catalina.out", "stdout.log");
     bean.setStdoutFiles(files);
     assertEquals(files, bean.getStdoutFiles());
   }
@@ -58,7 +58,7 @@ class LogResolverBeanTest {
   @Test
   void testGetLogDestinations_Empty() {
     // Instruments.isInitialized() returns false, so should be empty
-    bean.setStdoutFiles(Collections.emptyList());
+    bean.setStdoutFiles(List.of());
     // Mock Instruments.isInitialized() to return false
     try (var mocked = org.mockito.Mockito.mockStatic(psiprobe.tools.Instruments.class)) {
       mocked.when(psiprobe.tools.Instruments::isInitialized).thenReturn(false);
